--- a/Landing_page/style.css
+++ b/Landing_page/style.css
@@ -46,6 +46,7 @@ header ul li a{
     position: relative;
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
 }
@@ -81,6 +82,7 @@ header ul li a{
 .content .ImgBox{
     width: 600px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: flex-end;
     padding-right: 50px;
     margin-top: 70px;
